# esp-idf-ADE9000

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig
components/esp32_bus/: CMakeLists.txt
components/esp32_bus/include/: esp32_bus.h
components/esp32_bus/srcs/: esp32_bus.c
main/: CMakeLists.txt  esp-idf-ADE9000.c  esp-idf-ADE9000_v2.c  esp-idf-ADE9000_v3.c
